// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopoverInviteHomeserver - Snapshots > matches snapshot for PopoverInviteHomeserver with custom className 1`] = `
<div
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <button
      class="custom-homeserver-style"
      data-size="icon"
      data-testid="button-ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark h-4 w-4 text-white"
        data-testid="circle-help-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-[327px]"
    data-testid="popover-content"
  >
    <div
      class="flex-col gap-6 px-3 py-2"
      data-testid="container"
    >
      <div
        class="flex-col gap-2"
        data-testid="container"
      >
        <div
          aria-level="4"
          class="text-popover-foreground"
          data-size="sm"
          data-testid="heading-4"
          role="heading"
        >
          Don't have an invite yet?
        </div>
        <p
          class="font-medium text-muted-foreground"
          data-size="sm"
          data-testid="typography"
        >
          Ask the Pubky team for your invite code to access the Pubky homeserver.
        </p>
        <p
          class="font-medium text-muted-foreground"
          data-size="sm"
          data-testid="typography"
        >
          A homeserver is a storage provider that hosts your pubky-app-related data. Prefer to use another provider or host yourself? Support for custom homeservers is coming soon.
        </p>
      </div>
      <div
        class="flex-row gap-4"
        data-testid="container"
      >
        <a
          class="text-muted-foreground hover:text-brand"
          data-testid="link"
          href="mailto:hello@pubky.com"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
        </a>
        <a
          class="text-muted-foreground hover:text-brand"
          data-testid="link"
          href="https://x.com/pubky"
        >
          <svg
            class="lucide-x-twitter h-6 w-6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_18345_202114)"
            >
              <path
                d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
                fill="currentColor"
                opacity="0.8"
              />
            </g>
            <defs>
              <clippath
                id="clip0_18345_202114"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
        </a>
        <a
          class="text-muted-foreground hover:text-brand"
          data-testid="link"
          href="https://t.me/pubkychat"
        >
          <svg
            class="lucide-telegram h-6 w-6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.5 2.5L2 11l7.5 3L19 4.5l-6 11.5 3 6.5 5.5-20z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`PopoverInviteHomeserver - Snapshots > matches snapshot for default PopoverInviteHomeserver 1`] = `
<div
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <button
      class="hover:bg-brand/10"
      data-size="icon"
      data-testid="button-ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark h-4 w-4 text-white"
        data-testid="circle-help-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-[327px]"
    data-testid="popover-content"
  >
    <div
      class="flex-col gap-6 px-3 py-2"
      data-testid="container"
    >
      <div
        class="flex-col gap-2"
        data-testid="container"
      >
        <div
          aria-level="4"
          class="text-popover-foreground"
          data-size="sm"
          data-testid="heading-4"
          role="heading"
        >
          Don't have an invite yet?
        </div>
        <p
          class="font-medium text-muted-foreground"
          data-size="sm"
          data-testid="typography"
        >
          Ask the Pubky team for your invite code to access the Pubky homeserver.
        </p>
        <p
          class="font-medium text-muted-foreground"
          data-size="sm"
          data-testid="typography"
        >
          A homeserver is a storage provider that hosts your pubky-app-related data. Prefer to use another provider or host yourself? Support for custom homeservers is coming soon.
        </p>
      </div>
      <div
        class="flex-row gap-4"
        data-testid="container"
      >
        <a
          class="text-muted-foreground hover:text-brand"
          data-testid="link"
          href="mailto:hello@pubky.com"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
        </a>
        <a
          class="text-muted-foreground hover:text-brand"
          data-testid="link"
          href="https://x.com/pubky"
        >
          <svg
            class="lucide-x-twitter h-6 w-6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_18345_202114)"
            >
              <path
                d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
                fill="currentColor"
                opacity="0.8"
              />
            </g>
            <defs>
              <clippath
                id="clip0_18345_202114"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clippath>
            </defs>
          </svg>
        </a>
        <a
          class="text-muted-foreground hover:text-brand"
          data-testid="link"
          href="https://t.me/pubkychat"
        >
          <svg
            class="lucide-telegram h-6 w-6"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.5 2.5L2 11l7.5 3L19 4.5l-6 11.5 3 6.5 5.5-20z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
